# AspECS

./: CMakeLists.txt  README.md
include/: Specs.h
include/World/: EntityManager.h
include/datastructures/: VersionedID.h  dynamicArray.h  resourcePool.h
sandbox/: CMakeLists.txt  main.cpp
src/: Aspecs.cpp  CMakeLists.txt  Specs.cpp
src/Entities/: EntityManager.cpp
src/datastructures/: dynamicArray.cpp  resourcePool.cpp
test/: CMakeLists.txt  dynamicArrayTests.cpp  resourcePoolTests.cpp
